--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  flutter_localizations:
+    sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -75,6 +75,8 @@ dependencies:
   local_auth: ^2.2.0
   connectivity_plus: ^4.0.1
   package_info_plus: ^4.0.2
+  dropdown_button2: ^2.3.9
+  tuple: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -90,12 +92,25 @@ dev_dependencies:
   build_runner: ^2.4.9
   auto_route_generator: 7.3.2
   retrofit_generator: ^8.1.0
-  flutter_gen_runner: 5.3.1
+  flutter_gen_runner: 5.4.0
   freezed: ^2.5.2
   injectable_generator: 2.4.1
+  intl_utils: ^2.8.7
+
+flutter_intl:
+  enabled: true
+  main_locale: en
+  output_dir: lib/resource/generated
+  arb_dir: lib/resource/l10n
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+# flutter_intl:
+#   enabled: true
+#   main_locale: en
+#   output_dir: lib/generated
+#   arb_dir: lib/resource/l10n
+
 flutter_gen:
   output: lib/resource/generated
   line_lenght: 160
